// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/basic/affix/demo/basic.md correctly 1`] = `
LoadedCheerio {
  "0": <div>
    <div
      class=""
    >
      <button
        class="dcloud-btn dcloud-btn-primary"
        type="button"
      >
        <span>
          Affix top
        </span>
      </button>
    </div>
  </div>,
  "1": <br />,
  "2": <div>
    <div
      class=""
    >
      <button
        class="dcloud-btn dcloud-btn-primary"
        type="button"
      >
        <span>
          Affix bottom
        </span>
      </button>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 3,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/affix/demo/debug.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    style="height:10000px"
  >
    <div>
      Top
    </div>
    <div>
      <div
        class=""
      >
        <div
          style="background:red"
        >
          <button
            class="dcloud-btn dcloud-btn-primary"
            type="button"
          >
            <span>
              Affix top
            </span>
          </button>
        </div>
      </div>
    </div>
    <div>
      Bottom
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/affix/demo/on-change.md correctly 1`] = `
LoadedCheerio {
  "0": <div>
    <div
      class=""
    >
      <button
        class="dcloud-btn"
        type="button"
      >
        <span>
          120px to affix top
        </span>
      </button>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`renders ./components/basic/affix/demo/target.md correctly 1`] = `
LoadedCheerio {
  "0": <div
    class="scrollable-container"
  >
    <div
      class="background"
    >
      <div>
        <div
          class=""
        >
          <button
            class="dcloud-btn dcloud-btn-primary"
            type="button"
          >
            <span>
              Fixed at the top of container
            </span>
          </button>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
